# EclipseLock

./: .SRCINFO  .gitignore  CMakeLists.txt  Containerfile.arch  Containerfile.windows  LICENSE  Makefile  Makefile.build  PKGBUILD  README.md  build-windows-native.ps1  cat  eclipselock.nix  installer.nsi  shell.nix
.github/workflows/: build-deb.yml  build-release.yml  build-windows.yml  build.yml  c-cpp.yml  code-security.yml  codeql.yml  release.yml  windows.yml
DEBIAN/: control
build-tests/Testing/Temporary/: CTestCostData.txt
src/: AESCrypt.cpp  AESCrypt.h  main.cpp  resources.rc
src/gui/: MainWindow.cpp  MainWindow.h
tests/: test_aescrypt.cpp
